Form Spacing Issue

--- a/src/components/ThirdPartyEnquiryPopup/styles.scss
+++ b/src/components/ThirdPartyEnquiryPopup/styles.scss
@@ -23,7 +23,7 @@
 }
 .header {
     height: 50px;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     border-bottom: 1px solid #f2f2f2;
 }
 
